feat-backend: update README to clarify features and improve Docker setup instructions for backend

--- a/z-fuel-backend/README
+++ b/z-fuel-backend/README
@@ -1,26 +1,22 @@
-# Z-Fuel Backend – Order Online Service
+# Z-Fuel Backend
 
-This is the backend service for Z-Fuel's "Order Online" feature, allowing users to fetch categories and product data via API. The service connects to MongoDB and is containerized using Docker.
+The Z-Fuel Backend service includes three main features, each developed by different team members.
 
-## 🚀 Getting Started (Docker Only on Maryanne's Branch : mary)
+1. The Online Order feature, created by Maryanne, allows users to browse and place orders for products through a seamless API integration with MongoDB.
 
-> ⚠️ This setup only works on **Maryanne's branch** where Docker support and environment configuration have been implemented.
+2. The Fuel Map feature, developed by Rhya, provides users with access to an interactive map that shows fuel stations and their locations, enhancing the user experience for locating fuel services.
 
-### 📁 Prerequisites
+3. Lastly, the Fuel Prices feature, created by Caitlin, enables users to view real-time fuel prices, offering transparency and helping customers make informed decisions.
 
-- Docker installed on your machine.
-- Git installed to clone the repository.
-- `.env` file (see below for setup).
+These features work together to provide a comprehensive service to users, leveraging MongoDB and Docker for smooth, containerized deployment.
 
 ---
 
-### 🛠 Clone the Repository and Switch to Branch
+## 📁 Prerequisites
 
-```bash
-git clone https://github.com/MaryanneG3/mission-5.git
-cd z-fuel-backend
-git switch mary
-```
+- Ensure Docker is installed on your machine.
+- Ensure Git is installed to clone the repository.
+- `.env` file (see below for setup).
 
 ---
 
@@ -39,45 +35,66 @@ NODE_ENV=development
 
 > Replace `<username>` and `<password>` with your actual MongoDB Atlas credentials.
 
+If you want access to the other databases (fuelMap, fuelPrices), you will need to change the value of the DB variable in the .env file.
+
+For Maryanne's DB (Products):
+
+```env
+DB=products
+```
+
+For Rhya's DB (Fuel Map):
+
+```env
+DB=fuelMap
+```
+
+For Caitlin's DB (Fuel Prices):
+
+```env
+DB=fuelPrices
+```
+
+Make sure to set the correct database in your .env file before starting the server.
+
 ---
 
-### 🐳 Run the App Using Docker
+### 🛠 Clone the Repository and change to backend directory
 
 ```bash
-docker build -t zfuel-order-online-backend .
-docker run -p 5002:5002 --env-file .env zfuel-order-online-backend
-```
-
----
-
-### ✅ API Endpoints
-
-#### Get unique categories
-
-```
-GET /api/products/categories
-```
-
-#### Get all products
-
-```
-GET /api/products/all-products
-```
-
----
-
-### 🧪 Local Development Tip (Optional)
-
-If you'd rather not use Docker, after cloning you can run the app manually:
-
-```bash
+git clone https://github.com/MaryanneG3/mission-5.git
 cd z-fuel-backend
-git switch mary
+git switch <branch-name>
+```
+
+---
+
+## 🚀 Getting started - Local development
+
+After cloning you can run the app manually:
+
+```bash
 npm install
 npm run dev
 ```
 
----
+## 🚀 Getting Started with Docker (Only on Maryanne's Branch : mary)
+
+> ⚠️ This setup only works on **`mary`** where Docker support and environment configuration have been implemented.
+
+After cloning switch to branch mary:
+
+```bash
+git switch mary
+```
+
+### 🐳 Run the App Using Docker
+
+```bash
+docker build -t z-fuel-backend .
+docker run -p 5002:5002 --name z-fuel-backend-container zfuel-backend
+
+```
 
 ### 🧹 Cleanup Docker Resources
 
@@ -88,6 +105,7 @@ docker stop <id> && docker rm <id>
 
 ---
 
-### 👩‍💻 Maintained by
+### 👩‍💻 Last Updated by
 
 Maryanne Galo – Full Stack Developer, Z-Fuel Project - Mission Ready
+date: 05/09/2025
